# google-sync

./: Cargo.toml  README.md
crates/gauth/: Cargo.toml
crates/gauth/src/: config.rs  errors.rs  lib.rs
crates/gcalendar/: Cargo.toml
crates/gdrive/: Cargo.toml
src/: main.rs
